# bark-rs

./: .gitignore  Cargo.toml  pyproject.toml  setup.sh
.cargo/: config.toml
.github/workflows/: CI.yml
bark_rs/: Cargo.toml
bark_rs_model/: Cargo.toml
src/: lib.rs  main.rs
